--- a/htw-report/report.lyx
+++ b/htw-report/report.lyx
@@ -76,10 +76,6 @@
 Developing a CoffeeScript QUnit module for Play Framework 2.0.4
 \end_layout
 
-\begin_layout Standard
-
-\end_layout
-
 \begin_layout Author
 Michael Schleichardt
 \end_layout
@@ -274,6 +270,19 @@ Similar modules
 Implementation
 \end_layout
 
+\begin_layout Standard
+The source code for the project is hosted on github 
+\begin_inset CommandInset href
+LatexCommand href
+target "https://github.com/schleichardt/play-coffee-qunit"
+
+\end_inset
+
+.
+ The code is not yet production ready.
+ It is planned to present the module on Google groups.
+\end_layout
+
 \begin_layout Subsection
 Architecture overview
 \end_layout
@@ -315,6 +324,237 @@ The solution of this problem is to build two modules.
  One SBT plugin that is able to compile CoffeeScript files in the test folder
  to JavaScript files and a Play Framework plugin that provides controllers,
  models and views.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename uml/components.png
+	width 100text%
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:component-diagram"
+
+\end_inset
+
+Components of an application with QUnit CoffeeScript integration
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Components
+\end_layout
+
+\begin_layout Standard
+A web application with the module consists of four components.
+ The Web application itself and the Play module that run code on runtime
+ and the WebApp build project and the SBT module that execute their code
+ online in build time.
+ The tasks of the modules are described in 
+\begin_inset CommandInset ref
+LatexCommand formatted
+reference "fig:component-diagram"
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Section
+Results
+\end_layout
+
+\begin_layout Subsection
+Console test runner
+\end_layout
+
+\begin_layout Standard
+The console runner for tests can be used to run automatically all tests
+ in a headless environment.
+ That is convenient to run the tests in a continuous integration server
+ like Jenkins.
+ If a QUnit test fails, the whole team can be notified via email by Jenkins.
+ How such tests look like, can be seen in 
+\begin_inset CommandInset ref
+LatexCommand formatted
+reference "fig:Screenshots-test-runner"
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename img/screenshot-test-pass-console.png
+	width 100text%
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+passed tests
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename img/screenshot-test-failed-console.png
+	width 100text%
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+failed tests
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:Screenshots-test-runner"
+
+\end_inset
+
+Screenshots test runner in console
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Browser runner
+\end_layout
+
+\begin_layout Standard
+For now it is possible to run single tests in browser and select between
+ test files.
+ It looks exactly as in 
+\begin_inset CommandInset ref
+LatexCommand formatted
+reference "fig:Screenshot-qunit-browser"
+
+\end_inset
+
+.
+ 
+\end_layout
+
+\begin_layout Standard
+Before presenting my current status I'd like to add the possibility to run
+ multiple tests files in one browser window and make test selections in
+ the browser bookmarkeable.
+\end_layout
+
+\begin_layout Subsection
+Lessons learned in this independent coursework
+\end_layout
+
+\begin_layout Itemize
+functional programming in Scala
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+necessary to understand SBT
+\end_layout
+
+\begin_layout Itemize
+necessary to work with Plays Scala API
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+SBT and and writing plugins it
+\end_layout
+
+\begin_layout Itemize
+writing plugins for Play Framework
 \end_layout
 
 \begin_layout Standard
